fetchin data from firebase

--- a/src/components/styles/structure.css
+++ b/src/components/styles/structure.css
@@ -30,6 +30,10 @@ nav{
     max-width: 100%;
     padding: 6px;
 }
+.navText{
+    margin-left: 10px;
+    text-transform: capitalize;
+}
 
 .navImg{
     width: 40px;
@@ -37,10 +41,7 @@ nav{
     border-radius: 50%;
     background-color: var(--gray);
 }
-.navText{
-    margin-left: 10px;
-    text-transform: capitalize;
-}
+
 
 .messegeingSection{
     border: var(--div-borders);
@@ -50,6 +51,12 @@ nav{
     left: 50%;
     width: 48.5%;
     bottom: 55px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    overflow: hidden;
+
 }
 
 .inputSection{
@@ -57,12 +64,11 @@ nav{
     bottom: 10px;
     transform: translateX(-50%);
     left: 50%;
-    width: 49%;
+    width: 50%;
     max-height: fit-content;
     margin-top: 5px;
-    background-color: violet;
 }
-.text{
+.inputText{
     background-color: white;
     border: var(--div-borders);
     font-size: 4.5vh;
@@ -79,6 +85,24 @@ nav{
 }
 
 
+.msg{
+    background-color: var(--messeges-background-color);
+    max-width: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    line-height: 25px;
+}
+.name{
+    font-size: 20px;
+    color: rgb(163, 163, 163);
+}
+.text{
+    width: fit-content;
+    margin-left: 20px;
+}
 
 @media (max-width: 800px){
     .elementsInCenter{
@@ -90,10 +114,12 @@ nav{
     .inputSection{
         width: 95.5%;
     }
-    .text{
+    .inputText{
         width: 70%;
         font-size: 1.5em;
     }.sendBtn{
         font-size: 1.4em;
     }
 }
+
+
