--- a/src/components/styles/structure.css
+++ b/src/components/styles/structure.css
@@ -21,6 +21,7 @@ body{
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100%;
+    
 }
 
 nav{
@@ -54,9 +55,8 @@ nav{
     width: 48.5%;
     bottom: 55px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
+    flex-direction: column-reverse;
+    z-index: -1;
 }
 
 .inputSection{
